# homepage

./: .gitignore  AGENTS.md  CLAUDE.md  CNAME  GEMINI.md  QWEN.md  README.md  _coverpage.md  _navbar.md  index.html  index.md  minify.js  minify.sh  test.md  vercel.json
.claude/: settings.local.json
docs/: cv.md  home.md
for-students/: README.md  todo.md
js/: docsify-scroll-to-top.js
miscellaneous/: README.md  todo.md
notes/: Oakland25.txt  README.md  en_tips.md  pronunciation.md  top-conference.md  zero-knowledge.md
public/: lz.m4a
public/css/: beautify.css  styles.css  styles.min.css
public/js/: address-toggle.js  avatar-ripple.js  cv-project-lang.js  dark-mode.js  docsify-scroll-to-top.js  font-optimizer.js  progress-bar.js  publications.js  students-collapse.js
publications/: README.md
research/: README.md
research/papers/: README.md
teaching/: README.md  cpp.md  crypto.md
teaching/cpp/: Lab01.pptx
teaching/cpp_fall23/Lab02/: Lab02.pptx
teaching/cpp_fall23/Lab03/: Lab03.pptx
teaching/cpp_fall23/Lab04/: Lab04.pptx
teaching/cpp_fall23/Lab07/: Lab07 - 副本.pptx
teaching/cpp_fall23/Lab09/: Lab09.pptx
teaching/cpp_fall23/Lab10/: Lab10.pptx
teaching/cpp_fall23/Lab11/: Lab11.pptx
teaching/cpp_fall23/Lab12/: Lab12.pptx
teaching/cpp_fall23/Lab13/: Lab13.pptx
teaching/cpp_fall23/Lecture02/: Lecture02.pptx
teaching/cpp_fall23/Lecture04/: Lecture04.pptx
teaching/cpp_fall23/Lecture06/: Lecture06.pptx
teaching/cpp_fall23/Lecture06/code/src/: CMakeLists.txt
teaching/cpp_fall24/Lab01/: Lab01.pptx
teaching/crypto_fall23/: crypto.md
(+141 files in other folders)
